--- a/springcloud/pom.xml
+++ b/springcloud/pom.xml
@@ -72,6 +72,11 @@
             <version>${jackson.version}</version>
             <optional>true</optional>
         </dependency>
+
+        <dependency>
+            <groupId>com.google.code.findbugs</groupId>
+            <artifactId>jsr305</artifactId>
+        </dependency>
         <!-- Testing -->
         <dependency>
             <groupId>com.fasterxml.jackson.datatype</groupId>
