--- a/pom.xml
+++ b/pom.xml
@@ -275,12 +275,13 @@
             </plugin>
             <plugin>
                 <artifactId>maven-release-plugin</artifactId>
-                <version>3.0.1</version>
+<!--                <version>3.0.1</version>-->
+                <version>2.5.3</version>
                 <configuration>
                     <mavenExecutorId>forked-path</mavenExecutorId>
                     <localCheckout>true</localCheckout>
                     <pushChanges>false</pushChanges>
-                    <releaseProfiles>release-sign-artifacts</releaseProfiles>
+<!--                    <releaseProfiles>release-sign-artifacts</releaseProfiles>-->
                 </configuration>
             </plugin>
             <plugin>
@@ -421,6 +422,12 @@
 
         <profile>
             <id>release-sign-artifacts</id>
+            <activation>
+                <property>
+                    <name>performRelease</name>
+                    <value>true</value>
+                </property>
+            </activation>
             <build>
                 <plugins>
                     <plugin>
