--- a/pom.xml
+++ b/pom.xml
@@ -275,13 +275,12 @@
             </plugin>
             <plugin>
                 <artifactId>maven-release-plugin</artifactId>
-<!--                <version>3.0.1</version>-->
-                <version>2.5.3</version>
+                <version>3.0.1</version>
                 <configuration>
                     <mavenExecutorId>forked-path</mavenExecutorId>
                     <localCheckout>true</localCheckout>
                     <pushChanges>false</pushChanges>
-<!--                    <releaseProfiles>release-sign-artifacts</releaseProfiles>-->
+                    <releaseProfiles>release-sign-artifacts</releaseProfiles>
                     <tagNameFormat>axon-springcloud-@{project.version}</tagNameFormat>
                 </configuration>
             </plugin>
