--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,7 @@
         <maven-compiler.version>3.11.0</maven-compiler.version>
         <maven-deploy.version>3.0.0</maven-deploy.version>
         <maven-enforcer.version>3.3.0</maven-enforcer.version>
+        <maven-gpg.version>3.1.0</maven-gpg.version>
         <maven-install.version>3.1.1</maven-install.version>
         <maven-jar.version>3.3.0</maven-jar.version>
         <maven-javadoc.version>3.5.0</maven-javadoc.version>
@@ -447,7 +448,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-gpg-plugin</artifactId>
-                        <version>3.1.0</version>
+                        <version>${maven-gpg.version}</version>
                         <executions>
                             <execution>
                                 <id>sign-artifacts</id>
