--- a/pom.xml
+++ b/pom.xml
@@ -81,7 +81,7 @@
         <maven-jar.version>3.3.0</maven-jar.version>
         <maven-javadoc.version>3.5.0</maven-javadoc.version>
         <maven-release.version>3.0.1</maven-release.version>
-        <maven-sources.version>3.3.0</maven-sources.version>
+        <maven-source.version>3.3.0</maven-source.version>
         <maven-surefire.version>2.22.2</maven-surefire.version>
         <maven-resources.version>3.3.1</maven-resources.version>
     </properties>
@@ -320,7 +320,7 @@
             </plugin>
             <plugin>
                 <artifactId>maven-source-plugin</artifactId>
-                <version>${maven-sources.version}</version>
+                <version>${maven-source.version}</version>
                 <executions>
                     <execution>
                         <id>attach-sources</id>
