--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,8 +9,9 @@ updates:
     - "Type: Dependency Upgrade"
     - "Priority 1: Must"
   reviewers:
-    - "smcvb" # Main
+    - "CodeDrivenMitch"
     - "gklijs"
+    - "smcvb"
   milestone: 11
 - package-ecosystem: maven
   directory: "/"
@@ -21,6 +22,7 @@ updates:
     - "Type: Dependency Upgrade"
     - "Priority 1: Must"
   reviewers:
-    - "smcvb" # Main
+    - "CodeDrivenMitch"
     - "gklijs"
+    - "smcvb"
   milestone: 11
