--- a/springcloud-spring-boot-autoconfigure/pom.xml
+++ b/springcloud-spring-boot-autoconfigure/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <groupId>org.axonframework.extensions.springcloud</groupId>
         <artifactId>axon-springcloud-parent</artifactId>
-        <version>4.9.1</version>
+        <version>4.9.2-SNAPSHOT</version>
     </parent>
 
     <artifactId>axon-springcloud-spring-boot-autoconfigure</artifactId>
