--- a/springcloud-spring-boot-3-integrationtests/pom.xml
+++ b/springcloud-spring-boot-3-integrationtests/pom.xml
@@ -38,6 +38,7 @@
     <packaging>jar</packaging>
 
     <properties>
+        <axon.version>4.9.0</axon.version>
         <spring-cloud.version>2022.0.3</spring-cloud.version>
         <testcoontainers.version>1.19.1</testcoontainers.version>
 
@@ -50,7 +51,7 @@
         <dependency>
             <groupId>org.axonframework</groupId>
             <artifactId>axon-spring-boot-autoconfigure</artifactId>
-            <version>${project.version}</version>
+            <version>${axon.version}</version>
         </dependency>
 
         <dependency>
