--- a/springcloud-spring-boot-3-integrationtests/pom.xml
+++ b/springcloud-spring-boot-3-integrationtests/pom.xml
@@ -40,6 +40,7 @@
     <properties>
         <axon.version>4.9.0</axon.version>
         <spring-cloud.version>2023.0.3</spring-cloud.version>
+        <spring-cloud-consul.version>4.1.2</spring-cloud-consul.version>
         <testcoontainers.version>1.20.0</testcoontainers.version>
 
         <jar-plugin.version>3.4.2</jar-plugin.version>
@@ -62,7 +63,8 @@
 
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+            <artifactId>spring-cloud-starter-consul-discovery</artifactId>
+            <version>${spring-cloud-consul.version}</version>
         </dependency>
 
         <dependency>
@@ -101,6 +103,7 @@
             <artifactId>testcontainers</artifactId>
             <scope>test</scope>
         </dependency>
+
         <dependency>
             <groupId>org.testcontainers</groupId>
             <artifactId>junit-jupiter</artifactId>
