--- a/docs/reference/antora.yml
+++ b/docs/reference/antora.yml
@@ -1,7 +1,8 @@
 name: spring-cloud-extension-reference
 title: Spring Cloud Extension Guide
-version: true
-prerelease: true
+version:
+  axon-springcloud-(?<version>+({0..9}).+({0..9})).*: $<version>
+  master: development
 start_page: ROOT:index.adoc
 
 asciidoc:
