--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -38,3 +38,12 @@ updates:
           - "patch"
           - "minor"
           - "major"
+    ignore:
+      - dependency-name: "org.mockito:*"
+        versions: [ "[5.0.0,)" ]
+      - dependency-name: "org.springframework:*"
+        versions: [ "[6.0.0,)" ]
+      - dependency-name: "org.springframework.boot:*"
+        versions: [ "[3.0.0,)" ]
+      - dependency-name: "org.springframework.cloud:spring-cloud-dependencies"
+        versions: [ "[2022.0.0,)" ]
