--- a/docs/reference/antora.yml
+++ b/docs/reference/antora.yml
@@ -3,7 +3,7 @@ title: Spring Cloud Extension Guide
 version:
   axon-springcloud-(?<version>+({0..9}).+({0..9})).*: $<version>
   master: development
-prerelease: true
+prerelease: false
 start_page: ROOT:index.adoc
 
 asciidoc:
